new changes pushed added dashboard added in new file

--- a/src/app/layouts/about-us/about-us.component.html
+++ b/src/app/layouts/about-us/about-us.component.html
@@ -2,52 +2,48 @@
     <div id="about-main row">
         <div class=" col-12 story-container">
             <div class="our-tech-container">
-                <h3 class="text-left mb-4">
-                    What is ESG Report?
-                </h3>
+            <header class="section-header mb-5 text-center" style="margin-top: 60px;">
+                <h1 class="heading" ><span>A</span>bout <span>U</span>s</h1>
+            </header>
                 <p>
-                    ESG reporting is the disclosure of information about the environment, society, and corporate governance.
-                    Its goal is to bring attention to a company's ESG operations, enhance investor transparency, and
-                    encourage other businesses to follow suit.
+                    Sustainability Monitor is part of an academic project at the Engineering and Informatics department of the <a
+                        href="https://www.frankfurt-university.de/en/">Frankfurt University of Applied Sciences</a>, with master
+                    students of the program <a
+                        href="https://www.frankfurt-university.de/de/studium/master-studiengange/high-integrity-systems-msc/fuer-studieninteressierte/">High
+                        Integrity Systems</a>. The project is led by Prof. Gabriela Alves Werb, Ph.D., Professor for Business
+                    Information Systems at the <a
+                        href="https://www.frankfurt-university.de/de/hochschule/fachbereich-2-informatik-und-ingenieurwissenschaften/kontakt/professorinnen-und-professoren-im-fachbereich-2/gabriela-alves-werb/">Frankfurt
+                        University of Applied Sciences</a> and Data Science Expert at the <a
+                        href="https://www.bundesbank.de/en/bundesbank/research/rdsc/about-the-rdsc/gabriela-alves-werb-850222">Deutsche
+                        Bundesbank</a>.
                 </p>
             </div>
             <div class="container-divider m-5"></div>
-            <div class="origin-story-container">
-                <h3 class="text-left mb-4">
-                    What do ESG reports include?
-                </h3>
-                <p class="">
-                    ESG reports contain both qualitative and quantitative data about its three main subjects.
-                </p>
-                <h5>Environmental:</h5>
-                <p>
-    
-                    How an organization is addressing climate change
-                    How an organization is cutting carbon emissions
-                    How the organization is preventing deforestation, enhancing air and water quality, protecting
-                    biodiversity, or properly managing its waste
-                    How the organization manages its supply chain and uses resources in an ethical manner
-                    What steps is the organization taking to lower its emissions?
-                </p>
-                <h5>Social:</h5>
-                <p>
-                    How an organization cares for its employees and workplace
-                    Initiatives promoting gender, BIPOC, and LGBTQ+ inclusivity
-                    Engagement of employees at the company
-                    preserving the privacy of data
-                    Community participation
-                    Employment laws and labour standards
-                </p>
-                <h5>Governance:</h5>
-                <p>
-                    The internal controls of a corporation
-                    Leadership, board composition, executive compensation, audit committee structure, shareholder rights,
-                    bribery, lobbying, political contributions, and whistle-blower programs policies, principles, and
-                    procedures
-                </p>
-            </div>
-            <div class="container-divider"></div>
         </div>
     </div>
 </div>
 <app-team></app-team>
+<div class="container mt-5">
+    <div id="about-main row">
+        <div class=" col-12 story-container">
+            <div class="our-tech-container">
+                <header class="section-header mb-5 text-left" style="margin-top: 60px;">
+                    <h1 class="heading" style="font-size: 3rem;"><span>B</span>ehind the <span>S</span>cenes </h1>
+                </header>
+            </div>
+            <div id="gallery">
+                <img src="assets/img/scenes/0.jpg" />
+                <img src="assets/img/scenes/00.jpg" />
+                <img src="assets/img/scenes/1.png" />
+                <img src="assets/img/scenes/2.jpg" />
+                <img src="assets/img/scenes/3.jpg" />
+                <img src="assets/img/scenes/4.jpg" />
+                <img src="assets/img/scenes/5.jpg" />
+                <img src="assets/img/scenes/6.jpg" />
+                <img src="assets/img/scenes/7.jpg" />
+                <img src="assets/img/scenes/8.jpg" />
+            </div>
+            <div class="container-divider m-5"></div>
+        </div>
+    </div>
+</div>
