--- a/src/app/layouts/companies-list/company-details/company-details.component.html
+++ b/src/app/layouts/companies-list/company-details/company-details.component.html
@@ -42,7 +42,7 @@
             </ng-container>
             <ng-container *ngIf="company?.dow_reports_link.length == 0">
                 <div class="col-md-12 test-center">
-                    <p class="text-error">Oops! no pdf reports are available...</p>
+                    <p class="text-error">Oops, we currently have no PDF reports available for this firm. Check back later!</p>
                 </div>
             </ng-container>
         </div>
