--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,8 +1,9 @@
 <!-- Navbar Start -->
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg" style="padding-top: 0rem;
+    padding-bottom: 0rem;">
     <div class="container">
         <a class="navbar-brand" [routerLink]="'/'">
-            <img src="/assets/ESG.png" class="d-inline-block align-top" alt="logo" style="width: 7rem;">
+            <img src="/assets/ESG.png" class="d-inline-block align-top" alt="logo" style="width: 8rem;">
         </a>
 
         <button class="navbar-toggler custom-toggler ml-auto" type="button" data-bs-toggle="collapse"
@@ -25,9 +26,9 @@
                 <li class="nav-item px-1 py-2 py-2">
                     <a [routerLink]="['/dashboard']" routerLinkActive="active"  class="nav-link">Dashboard&nbsp;&nbsp;<i class="fa fa-angle-down" aria-hidden="true"></i></a>
                         <ul class="drop-menu">
-                            <li class="submenu-li" ><a href="#">Submenu</a></li>
-                            <li class="submenu-li" ><a href="#">Submenu</a></li>
-                            <li class="submenu-li" ><a href="#">Submenu</a></li>
+                            <li class="submenu-li" ><a >Industry ESG Analysis</a></li>
+                            <li class="submenu-li" ><a >Firm ESG Analysis</a></li>
+                            <li class="submenu-li" ><a >Firm ESG Analysis</a></li>
                         </ul>
                 </li>
                 <!-- <li class="nav-item px-1 py-2 py-2">
