--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -1,4 +1,5 @@
 <app-sustainability-report></app-sustainability-report>
+<app-measures-static-data-section></app-measures-static-data-section>
 <app-company></app-company>
     <!-- Showcase -->
     <section class="showcase">
