--- a/src/app/layouts/home/sustainability-report/sustainability-report.component.html
+++ b/src/app/layouts/home/sustainability-report/sustainability-report.component.html
@@ -4,8 +4,7 @@
         <div class="row">
             <!-- Left-Side -->
             <div class="col-md-8 col-sm-12  left mt-5">
-                <h1 class="heading"><span>S</span>ustainability</h1>
-                <h1 class="heading"><span>M</span>onitor</h1>
+                <h1 class="heading"><span>S</span>ustainability <span>M</span>onitor</h1>
                 <p>
                     Sustainability Monitor provides a public repository for corporate sustainability reports and annual financial reports with information about firms’ environmental, social, and governance (ESG) impact for a broad span of firms and years. 
                 </p>
@@ -16,7 +15,7 @@
                     This portal is part of an academic project at the Engineering and Informatics department of the <a href="https://www.frankfurt-university.de/en/">Frankfurt University of Applied Sciences</a>. Our vision is to increase transparency for consumers, investors, firms, and policy makers about firms’ ESG goals and performance. 
                 </p>    
                 <p>
-                    Who is behind this initiative? Go to <a [routerLink]="['/about-us']">about Us</a> to learn more about our project and the involved team. 
+                    Who is behind this initiative? Go to <a [routerLink]="['/about-us']">about us</a> to learn more about our project and the involved team. 
                 </p>    
                 <p>
                     We welcome support from the community and interested stakeholders to continue developing this portal and improve sustainability data access for informed decision making and research. Would you like to support our project? Please <a [routerLink]="['/contact-us']">contact us</a> using our contact form or write us at info@sustainabilitymonitor.org.
