--- a/src/app/repository-view/repository-view.component.html
+++ b/src/app/repository-view/repository-view.component.html
@@ -81,7 +81,7 @@
                 <div class="d-inline-flex w-100"  *ngIf="selectedCompany['dow_reports_link'].length == 0">
                     <button class="folder-container text-error">
                         <div class="folder-name">
-                            Oops! no pdf reports are available...
+                            Oops, we currently have no PDF reports available for this firm. Check back later!
                         </div>
                     </button>
                 </div>
