--- a/src/app/layouts/about-us/about-us.component.css
+++ b/src/app/layouts/about-us/about-us.component.css
@@ -4,7 +4,9 @@
     font-family: 'Open Sans', sans-serif;
     margin: 0 auto;
 }
-
+a {
+    color: #E95205;
+}
 #about-main .row {
     margin-left: 0;
     margin-right: 0;
@@ -91,4 +93,33 @@
     line-height: 25px;
     padding-left: 5px;
     color: #676a6c;
+}
+#gallery {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 0 4px;
+}
+
+#gallery img {
+    width: 33%;
+    height: 300px;
+    object-fit: cover;
+    margin-top: 8px;
+    padding: 0 4px;
+    border-radius: 10px;
+}
+
+@media (max-width: 800px) {
+    #gallery img {
+        width: 50%;
+    }
+}
+
+@media (max-width: 600px) {
+    #gallery img {
+        width: 100%;
+    }
 }
