--- a/src/app/layouts/header/header.component.css
+++ b/src/app/layouts/header/header.component.css
@@ -33,9 +33,9 @@ ul li ul {
 }
 
 ul li ul li {
-    margin: 5px 17px 5px 17px;
-        width: calc(100% - 40px);
-        line-height: 2.2;
+    margin: 7px 25px 6px 22px;
+    width: calc(100% - 30px);
+    line-height: 2.4;
 }
 
 
@@ -46,6 +46,7 @@ ul li:hover a {
 ul li:hover ul {
     visibility: visible;
     opacity: 1;
+    z-index: 99;
     box-shadow: 0px 3px 5px 2px #EBECF1;
 }
 
