--- a/src/app/layouts/home/team/team.component.html
+++ b/src/app/layouts/home/team/team.component.html
@@ -1,8 +1,20 @@
 <!-- Teams -->
 <section class="teams">
     <div class="container">
-        <header class="section-header">
-            <h1 class="heading"><span>T</span>eams</h1>
+        
+            <header class="section-header mb-5 text-center" style="margin-bottom: 100px;">
+                <h1 class="heading"><span>M</span>eet <span>O</span>ur <span>T</span>eam </h1>
+            </header>
+            <header class="section-header">
+                <h1 class="heading" style="font-size: 3rem;"><span>P</span>roject <span>C</span>oordinator</h1>
+            </header>
+        <div class="in" style="width: fit-content;">
+            <div class="row" id="team1">
+                <app-team-card  *ngFor="let userTeam of ProjectCoordinator" [user]="userTeam"></app-team-card>
+            </div>
+        </div>
+        <header class="section-header mt-5">
+            <h1 class="heading" style="font-size: 3rem;"><span>D</span>eveloper <span>T</span>eam</h1>
         </header>
         <div class="in">
             <div class="row" id="team1">
