--- a/src/app/layouts/companies-list/company-details/company-details.component.html
+++ b/src/app/layouts/companies-list/company-details/company-details.component.html
@@ -48,3 +48,36 @@
         </div>
     </div>
 </div>
+
+<div class="wrapper-grey padded">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12" id="showreports">
+                <div>
+                    <h3 style='font-size: 20px; color: #E95205; '> WordCloud </h3>
+                    <hr>
+                </div>
+            </div>
+            <ng-container *ngIf="company?.wordcloud.length !== 0">
+                    <div class="col-xs-12 col-sm-4 col-md-4 mb-5 mt-2" *ngFor="let cloudImg of company?.wordcloud">
+                        <div class="card cursor-pointer align-items-center justify-content-center"
+                        style="background-image: url({{cloudImg}});
+                            background-size: cover;
+                            background-position: center center;
+                            width: 45vmin;
+                            height: 30vmin;">
+                            <div class="card-header-name text-center" style="    bottom: -2.2rem !important;">
+                                <span>{{ getCloudName(cloudImg) }}</span>
+                            </div>
+                        </div>
+                    </div>
+            </ng-container>
+            <ng-container *ngIf="company?.wordcloud.length == 0">
+                <div class="col-md-12 test-center">
+                    <p class="text-error">Oops, we currently have no wordCloud available for this firm. Check back
+                        later!</p>
+                </div>
+            </ng-container>
+        </div>
+    </div>
+</div>
