--- a/src/app/layouts/dashboard/dashboard.component.html
+++ b/src/app/layouts/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-12 mb-3 mt-5">
             <iframe id="inlineFrameExample" title="Inline Frame Example"  width="99%" style="min-height: 100vh;"
-                src="http://ec2-18-184-23-208.eu-central-1.compute.amazonaws.com:8050/">
+                src="https://visualize.sustainabilitymonitor.org/industry">
             </iframe>
         </div>
     </div>
