--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -21,7 +21,7 @@
                     <a class="nav-link active" aria-current="page" [routerLink]="['/about-us']" routerLinkActive="active" >About Us</a>
                 </li>
                 <li class="nav-item px-1 py-2">
-                    <a [routerLink]="['/company/list']" routerLinkActive="active"  class="nav-link">Companies</a>
+                    <a [routerLink]="['/company/list']" routerLinkActive="active"  class="nav-link">Firms</a>
                 </li>
                 <li class="nav-item px-1 py-2 py-2">
                     <a routerLinkActive="active"  class="nav-link">Dashboard&nbsp;&nbsp;<i class="fa fa-angle-down" aria-hidden="true"></i></a>
