--- a/src/app/layouts/home/company/company.component.html
+++ b/src/app/layouts/home/company/company.component.html
@@ -4,7 +4,7 @@
     <div class="container" data-aos="fade-up">
 
         <header class="section-heade">
-            <h1 class="heading"><span>C</span>ompanies</h1>
+            <h1 class="heading"><span>F</span>irms</h1>
         </header>
 
         <div class="wrapper-grey padded">
