--- a/src/app/repository-view/repository-view.component.html
+++ b/src/app/repository-view/repository-view.component.html
@@ -4,7 +4,7 @@
         <div class="row">
             <!-- Left-Side -->
             <div class="col-md-8 col-sm-12  left">
-                <h1 class="heading"> <span>P</span>DF <span>R</span>epository</h1>
+                <h1 class="heading"> <span>P</span>DF <span>R</span>eports</h1>
             </div>
             <!-- Rigth-Side -->
             <!-- <div class="col-md-4 col-sm-12 right search-box input-group">
@@ -25,7 +25,7 @@
         <div class="card-header">
             <div class="row align-items-center">
                 <div class="col mr-auto">
-                    <h6 class="card-title m-0">Companies reports in PDF view</h6>
+                    <h6 class="card-title m-0">Firms' reports in PDF view</h6>
                 </div>
                 <div class="col col-auto pr-2">
                     <div class="btn-group">
