--- a/src/app/layouts/companies-list/company-details/company-details.component.html
+++ b/src/app/layouts/companies-list/company-details/company-details.component.html
@@ -9,7 +9,7 @@
             <!-- Rigth-Side -->
             <div class="col-md-10 col-sm-12 right">
                 <div style='margin-top: 60px;'>
-                    <h4 style='font-size: 20px; color: #E95205;'> About Company </h4>
+                    <h4 style='font-size: 20px; color: #E95205;'> About Firm</h4>
 
                     <p [innerHTML]="company?.description"></p>
                     <a [href]="company?.web_link" target="_blank"> <button type="button" class="btn first px-5 py-2" id="reports">View more</button></a>
