--- a/src/app/layouts/home/measures-static-data-section/measures-static-data-section.component.html
+++ b/src/app/layouts/home/measures-static-data-section/measures-static-data-section.component.html
@@ -28,7 +28,7 @@
                         href="https://www.sasb.org/">Accounting Standards Board</a> (SASB), the <a
                         href="https://www.fsb-tcfd.org/">Task Force on Climate-Related Financial Disclosures</a> (TCFD), or the <a
                         href="https://www.unpri.org/">Nations Principles for Responsible Investment</a> (PRI) for the financial
-                    services sector. Therefore, comparing the disclosures across different companies and sectors is still very
+                    services sector. Therefore, comparing the disclosures across different firms and sectors is still very
                     challenging.
                 </p>
             </div>
@@ -61,7 +61,7 @@
                     <li><b>Scope 3</b> emissions: Emissions related to upstream or downstream activities by other parties in the value chain,
                     for
                     example, firms’ suppliers and distributors, or how the sold products are used.
-                    Most companies report on scope 1 emissions but reporting on scope 2 and 3 emissions are progressively more challenging,
+                    Most firms report on scope 1 emissions but reporting on scope 2 and 3 emissions are progressively more challenging,
                     due to the lack of available data and methodological difficulties in attributing emissions along the value chain.
                     Social</li>
                 </ul>
@@ -109,21 +109,21 @@
             </p>
             <p>
                 However, sustainability reports are mostly still voluntary and hard to compare, as there are many (non-binding)
-                standards available. Therefore, most companies may currently decide whether, what and how to report on their ESG
+                standards available. Therefore, most firms may currently decide whether, what and how to report on their ESG
                 impact. The reported information is rarely validated by an independent third-party.
             </p>
             <p>
                 In an effort to expand the scope and increase the comparability of sustainability reports, the European Commission
                 recently adopted a package of measures towards a binding classification system, or taxonomy. These include the
                 Corporate Sustainability Reporting Directive (CSRD), passed in 2021. This directive applies to all publicly listed
-                companies, including small and medium enterprises (SME), which amount to approximately 50.000 firms. Non-European
+                firms, including small and medium enterprises (SME), which amount to approximately 50.000 firms. Non-European
                 firms with at least one subsidiary or branch in the EU and a local net turnover of €150 million are also subject to
                 this directive.
             </p>
             <p>
                 The CSRD establishes mandatory ESG reporting standards and requires that the reported information is audited, which
                 is an important step towards the reliability and accuracy of the ESG indicators. It applies in January 2024
-                (reporting year 2023) for firms already subject to the NFRD, extends to large companies not currently covered by the
+                (reporting year 2023) for firms already subject to the NFRD, extends to large firms not currently covered by the
                 NFRD in 2025 and to publicly listed SMEs in 2026.
             </p>
             <p>
